fix corretto margin nel main che mi comportava uno strabordamento nel header e nel footer e uno dopo l'overflow proprio del main

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 
 body{
   background-color: black;
+  font-family: 'Lato', sans-serif;
 }
 
 .debug{
@@ -51,9 +52,9 @@ header .button .speaker, .expand{
 main{
   height: calc(100vh - 140px);
   overflow: auto;
-  max-width: 100vw;
+  /* max-width: 100vw; */
   flex-wrap: wrap;
-  margin: 0 10px;
+  /* margin: 0 10px; */
 }
 
 main .pic{
@@ -78,7 +79,7 @@ footer{
   background-color: #222222;
   justify-content: space-between;
   color: white;
-  max-width: 100vw;
+  /* max-width: 100vw; */
   align-items: center;
 }
 
@@ -102,7 +103,7 @@ footer .menu p{
 }
 
 footer .menu i{
-  font-size: 25px;
+  font-size: 1.5rem;
 }
 
 footer .menu .chev i{
